@@ -1,3 +1,9 @@
+2000-10-24  Lars J. Aas  <larsa@sim.no>
+
+	* m4sugar.m4: (m4_tolower, m4_toupper): New macros.
+	* acgeneral.m4 (AC_PREFIX_PROGRAM): Use m4_toupper().
+	* aclang.m4 (AC_F77_FUNC): Use m4_toupper()/m4_tolower().
+
 2000-10-24  Pavel Roskin  <proski@gnu.org>
 
 	* m4sugar.m4 (m4_quote): Comment change.
